# SpineCodex

./: .bazelrc  AGENTS.md  NOTICE  README.md  flake.nix
.github/scripts/: run-bazel-ci.sh
.github/workflows/: README.md  bazel.yml  ci.yml  issue-labeler.yml  rust-ci-full.yml  rust-ci.yml  rust-release-upstream.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  spine-npm-darwin-arm64-preview.yml  spine-npm-darwin-arm64-test.yml  spine-npm-full-platform-rehearsal.yml  spine-npm-linux-arm64-diagnostic.yml  spine-npm-linux-x64-diagnostic.yml  spine-npm-rehearsal.yml
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py
codex-rs/: Cargo.toml  README.md  default.nix  deny.toml
codex-rs/.cargo/: audit.toml  config.toml
codex-rs/app-server/: README.md
codex-rs/app-server-daemon/: README.md
codex-rs/app-server-test-client/: README.md
codex-rs/codex-mcp/: Cargo.toml
codex-rs/core/: Cargo.toml  README.md  config.schema.json
codex-rs/docs/: codex_mcp_interface.md  spinecodex-versioning.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: README.md
codex-rs/execpolicy/: README.md
codex-rs/linux-sandbox/: README.md
codex-rs/protocol/: BUILD.bazel  Cargo.toml  README.md  build.rs
codex-rs/responses-api-proxy/: README.md
codex-rs/spine-core/: Cargo.toml
codex-rs/spine-core/src/: lib.rs  model.rs  reducer.rs  tests.rs
codex-rs/spine-core/tests/: host_conformance.rs
docs/: spine-close-compact-cache-poc.md  spine-grouped-close-compact-rca.md
scripts/: stage_npm_packages.py
(+751 files in other folders)
