[package]
name = "codex-spine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_spine_core"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
